# gqlforge

./: .clippy.toml  .codespellignore  .dockerignore  .gitignore  .graphqlrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  context7.json  docker.sh  dprint.json  fly.toml  install.sh  lint.sh  project-words.txt
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  guide.md
.github/workflows/: benchmark.yml  benchmark_main.yml  benchmark_pr_track.yml  build-website.yml  build_matrix.yml  ci.yml  docker-release.yml  labels.yml  lint.yml  nginx-benchmark.yml  release.yml  spell-check.yml  stale.yml
.nightly/: rust-toolchain.toml
assets/: canvas.excalidraw
benches/: bench_synth.rs  data_loader_bench.rs  from_json_bench.rs  gqlforge_benches.rs  handle_request_bench.rs  http_execute_bench.rs  impl_path_string_for_evaluation_context.rs  json_like_bench.rs  protobuf_convert_output.rs  request_template_bench.rs
docs/: .gitignore  config.toml  copy-markdown.sh  docusaurus.config.ts  package-lock.json  package.json  release-notes-generator.js  sidebars.ts  tailwind.config.ts
docs/blog/: 2023-graphql-conf-2023-09-29.md  api-orchestration-2023-06-12.md  api-strategy-2024-08-13.md  authors.yml  automatic-persisted-queries-2023-08-11.md  bff-case-study-2024-08-30.md  bff-challenges-2023-06-19.md  configuration-v2-2024-12-14.md  graphql-and-ms-match-2024-08-18.md  graphql-angular-clients-2024-07-20.md  graphql-introspection-security-2024-7-12.md  graphql-microservices-migration-2024-08-15.md  graphql-schema-2024-07-11.md  graphql-schema-part-2-1-2024-07-21.mdx  graphql-schema-part-2-2-2024-07-22.mdx  graphql-schema-part-2-3-2024-07-23.mdx  graphql-vs-openapi-part-1-2024-07-29.md  graphql-vs-openapi-part-2-2024-07-30.md  graphql-vs-openapi-part-3-2024-07-31.md  graphql-vs-rest-vs-grpc-2024-03-30.md  graphql-vue-clients-2024-08-01.md  grpc-vs-graphql-2024-07-26.mdx  guide-on-graphiql-2024-07-24.md  no-code-graphql-2024-05-30.md  tailcall-n+1-working-2024-08-04.md  what-is-grpc-2024-07-13.mdx
docs/content/: _index.md
docs/docs/: N+1.md  apollo-federation-subgraph.md  apollo-studio.md  auth.md  cli.md  client-tuning.md  config-generation.md  context.md  conventions.md  data-dog.md  directives.md  environment-variables.md  execution-strategy.md  getting-started.mdx  gh-action.md  gqlforge-on-aws.md  gqlforge-on-fly.md  grpc.md  honey-comb.md  http-cache.md  http2.md  llm.md  logging.md  new-relic.md  playground.md  rest.md  runtime-config.md  scalar.md  scripting.md  tailcall-on-fly.md  telemetry.md  watch-mode.md
docs/graphql/: cto-guide.md  directives.md  faq.md  graphql-conf-hackathon-2024.md  graphql-vs-rest.mdx  graphql.md  introspection.md  problem-statement.md  queries.md  schema-and-types.md  variables.md  what-is-graphql.md
docs/outlines/: README.md  exploring-graphiql-the-in-browser-ide-for-graphql.md
docs/plugins/: custom-blog-plugin.ts
docs/privacy/: index.md  sidebar.ts
docs/publish-externals/: snapshot.json
docs/static/: install.sh  style.css
docs/templates/: base.html  index.html  page.html  section.html
examples/: apollo_federation_subgraph_post.graphql  apollo_federation_subgraph_user.graphql  auth.graphql  call.graphql  cors.graphql  graphql-composition.graphql  grpc-reflection.graphql  grpc.graphql  jsonplaceholder-generated.graphql  jsonplaceholder.graphql  jsonplaceholder.yaml  jsonplaceholder_batch.graphql  jsonplaceholder_http_2.graphql  jsonplaceholder_script.graphql  lint.sh  rest-api.graphql  telemetry-otlp.graphql  telemetry-prometheus.graphql  telemetry-stdout.graphql
examples/federation/: README.md  gateway.js
gqlforge-aws-lambda/: Cargo.toml
gqlforge-aws-lambda/src/: http.rs  main.rs  runtime.rs
gqlforge-chunk/: Cargo.toml
gqlforge-chunk/src/: chunk.rs  lib.rs
gqlforge-cloudflare/: Cargo.toml  package.json  wrangler.toml
gqlforge-cloudflare/src/: cache.rs  env.rs  file.rs  handle.rs  http.rs  runtime.rs
gqlforge-cloudflare/tests/: cf_tests.spec.ts
gqlforge-fixtures/: Cargo.toml  README.md  build.rs  error.rs
gqlforge-formatter/: Cargo.toml
gqlforge-formatter/src/: error.rs  formatter.rs  lib.rs  parser.rs
gqlforge-hasher/: Cargo.toml
gqlforge-hasher/src/: lib.rs
gqlforge-http-cache/: Cargo.toml
gqlforge-http-cache/src/: cache.rs
gqlforge-macros/: Cargo.toml
gqlforge-macros/src/: codegen.rs  document_definition.rs  lib.rs  merge_right.rs  resolver.rs
gqlforge-prettier/: Cargo.toml
gqlforge-tracker/: Cargo.toml
gqlforge-tracker/src/: can_track.rs  dispatch.rs  event.rs
gqlforge-tracker/src/collect/: posthog.rs
gqlforge-typedefs/: Cargo.toml
gqlforge-typedefs-common/: Cargo.toml
gqlforge-typedefs-common/src/: common.rs  directive_definition.rs  enum_definition.rs  input_definition.rs  lib.rs  scalar_definition.rs
gqlforge-typedefs/src/: gen_gql_schema.rs  main.rs
gqlforge-upstream-grpc/: Cargo.toml  README.md  build.rs
gqlforge-upstream-grpc/src/: error.rs  main.rs
gqlforge-valid/: Cargo.toml
gqlforge-valid/src/: cause.rs  error.rs  lib.rs  valid.rs
gqlforge-version/: Cargo.toml
gqlforge-version/src/: lib.rs
gqlforge-wasm/: Cargo.toml  README.md  package.json
gqlforge-wasm/src/: builder.rs  env.rs  file.rs  http.rs  lib.rs  runtime.rs
npm/: gen-root.ts  gen.ts  package.json  post-install.js
src/: main.rs
src/cli/: command.rs  fmt.rs  metrics.rs  mod.rs  postgres.rs  s3.rs  telemetry.rs  update_checker.rs
src/core/: app_context.rs  async_graphql_hyper.rs  counter.rs  directive.rs  document.rs  endpoint.rs  errata.rs  merge_right.rs  mod.rs  path.rs  print_schema.rs  resource_reader.rs  runtime.rs  scalar.rs  serde_value_ext.rs  tracing.rs  transform.rs  try_fold.rs  variance.rs  worker_hooks.rs  wrapping_type.rs
tests/: execution_spec.rs  expression_spec.rs  jit_spec.rs  postgres_execution_spec.rs  server_spec.rs  subscription_spec.rs
tests/cli/: gen.rs  parser.rs
tests/core/: env.rs  file.rs  http.rs  mod.rs  model.rs  parse.rs  postgres.rs  runtime.rs  (+2 more)
(+928 files in other folders)
