[package]
edition = "2021"
name = "gqlforge"
version = "0.1.0"

[[bin]]
name = "gqlforge"
path = "src/main.rs"

[workspace.dependencies]
anyhow = "1.0.82"
async-graphql = { version = "7.0.9" }
convert_case = "0.6.0"
derive_more = { version = "1", features = ["from", "debug"] }
futures-util = { version = "0.3.30" }
headers = "0.3.9" # previous version until hyper is updated to 1+
http = "0.2.12" # previous version until hyper is updated to 1+
indexmap = "2.2.6"
insta = { version = "1.38.0", features = ["json"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
tailcall-valid = "=0.1.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "time"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dependencies]
# dependencies specific to CLI must have optional = true and the dep should be added to default feature.
# one needs to add default feature tag if it is something IO related or might conflict with WASM

ctrlc = { version = "3.4.5", optional = true }
genai = { git = "https://github.com/laststylebender14/rust-genai.git", rev = "63a542ce20132503c520f4e07108e0d768f243c3", optional = true }
gqlforge-http-cache = { path = "gqlforge-http-cache", optional = true }
gqlforge-version = { path = "./gqlforge-version", optional = true }
http-cache-reqwest = { version = "0.13.0", features = [
  "manager-moka",
], default-features = false, optional = true }
hyper-rustls = { version = "0.25.0", optional = true }
inquire = { version = "0.9.0", optional = true }
mimalloc = { version = "0.1.41", default-features = false, optional = true }
moka = { version = "0.12.7", default-features = false, features = [
  "future",
], optional = true }
opentelemetry-otlp = { version = "0.16.0", features = [
  "trace",
  "logs",
  "metrics",
  # required to make grpc requests
  "tls-roots",
], optional = true }
opentelemetry-system-metrics = { version = "0.2.0", optional = true }
rustls = { version = "0.23.5", optional = true, features = [
  "std",
], default-features = false }
rustls-pki-types = "1.5.0"

# dependencies safe for wasm:

anyhow = { workspace = true }
async-recursion = "1.1.1"
async-std = { version = "1.12.0", features = [
  "wasm-bindgen-futures",
  "unstable",
] }
async-trait = "0.1.80"
cache_control = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
derive-getters = "0.5.0"
derive_setters = "0.1.6"
exitcode = "1.1.2"
fnv = "1.0.7"
futures-channel = { version = "0.3.30" }
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
futures-util = { workspace = true }
hyper = { version = "0.14.28", features = ["server"], default-features = false }
indexmap = { workspace = true }
lazy_static = { workspace = true }
lru = { version = "0.12.3" }
nom = "7.1.3"
num_cpus = "1.16.0"
once_cell = "1.19.0"
prost = "0.13.1"
prost-reflect = { version = "0.14.0", features = ["serde"] }
protox = "0.7.0"
protox-parse = "0.7.0"
regex = "1.10.4"
reqwest = { workspace = true }
reqwest-middleware = "0.2.5"
resource = "0.5.0"
rquickjs = { "version" = "0.7.0", optional = true, features = ["macro"] }
rustls-pemfile = { version = "1.0.4" }
schemars = { version = "0.8.17", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.16"
serde_qs = "0.13"
serde_urlencoded = "0.7.1"
serde_yaml_ng = "0.10.0"
strum_macros = "0.26.4"
thiserror = { workspace = true }
tokio = { workspace = true }
ttl_cache = "0.5.1"
update-informer = { version = "1.1.0", default-features = false, features = [
  "github",
  "reqwest",
], optional = true }
url = { workspace = true }
which = { version = "7.0.0", optional = true }
# TODO: disable some levels with features?
async-graphql = { workspace = true, features = [
  "dynamic-schema",
  "dataloader",
  "apollo_tracing",
  "opentelemetry",
] }
async-graphql-extension-apollo-tracing = { version = "3.2.15", git = "https://github.com/tailcallhq/async_graphql_apollo_studio_extension.git", rev = "b467f87da67d2ce7fb423132083a9139c8e47d81" }
async-graphql-value = "7.0.9"
base64 = "0.22.1"
chrono = "0.4.38"
convert_case = { workspace = true }
dashmap = "6.1.0"
derive_more = { workspace = true }
dotenvy = "0.15.7"
getrandom = { version = "0.2.14", features = ["js"] }
gqlforge-hasher = { path = "gqlforge-hasher" }
gqlforge-macros = { path = "gqlforge-macros" }
gqlforge-tracker = { path = "gqlforge-tracker", optional = true }
gqlforge-typedefs-common = { path = "./gqlforge-typedefs-common" }
headers = { workspace = true }
htpasswd-verify = { version = "0.3.0", git = "https://github.com/twistedfall/htpasswd-verify", rev = "ff14703083cbd639f7d05622b398926f3e718d61" } # fork version that is wasm compatible
http = { workspace = true }
indenter = "0.3.3"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
num = "0.4.3"
opentelemetry = { version = "0.23.0", features = ["trace", "logs", "metrics"] }
opentelemetry-appender-tracing = { version = "0.4.0" }
opentelemetry-http = "0.12.0"
opentelemetry-prometheus = "0.16.0"
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry-stdout = { version = "0.4.0", features = [
  "trace",
  "logs",
  "metrics",
] }
opentelemetry_sdk = { version = "0.23.0", features = [
  "trace",
  "logs",
  "metrics",
] }
path-clean = "=1.0.1"
pathdiff = "0.2.1"
phonenumber = "0.3.4"
pluralizer = "0.5.0"
prometheus = "0.13.4"
rand = "0.8.5"
serde_json_borrow = { version = "0.7.1", default-features = false }
strum = "0.26.2"
tailcall-chunk = "0.3.0"
tailcall-valid = { workspace = true }
tonic = { version = "0.11.0", default-features = false }
tonic-types = "0.12.1"
tracing = { workspace = true }
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = [
  "default",
  "fmt",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"

# to build rquickjs bindings on systems without builtin bindings
[target.'cfg(all(target_os = "windows", target_arch = "x86"))'.dependencies]
rquickjs = { "version" = "0.7.0", optional = true, features = [
  "macro",
  "bindgen",
] }

[dev-dependencies]
bincode = "1.3.3"
cacache = { version = "13.0.0", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }
criterion = "0.5.1"
datatest-stable = "0.2.9"
flate2 = "1.0.30"
gqlforge-fixtures = { path = "./gqlforge-fixtures" }
gqlforge-formatter = { path = "gqlforge-formatter" }
http-cache-semantics = { version = "1.0.1", default-features = false, features = [
  "with_serde",
  "reqwest",
] }
httpmock = "0.7.0"
insta = { workspace = true }
maplit = "1.0.2"
markdown = "1.0.0-alpha.17"
pretty_assertions = "1.4.0"
stripmargin = "0.1.1"
tempfile = "3.10.1"
test-log = { version = "0.2.16", default-features = false, features = [
  "color",
  "trace",
] }
tokio-test = "0.4.4"

[features]

# Feature Flag to enable V8.
# V8 currently is not support on all platforms so, we control it via this feature flag.
js = ["dep:rquickjs"]

# Feature Flag to core CLI features.
# This is created to control what we expose for WASM.
# Will be deprecated once we move CLI to it's own crate and WASM builds won't depend on it.
cli = [
  "tokio/fs",
  "tokio/rt-multi-thread",
  "dep:mimalloc",
  "dep:http-cache-reqwest",
  "dep:moka",
  "dep:hyper-rustls",
  "dep:rustls",
  "dep:inquire",
  "dep:which",
  "dep:update-informer",
  "opentelemetry_sdk/testing",
  "opentelemetry_sdk/rt-tokio",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-system-metrics",
  "dep:gqlforge-tracker",
  "dep:gqlforge-http-cache",
  "dep:gqlforge-version",
  "dep:genai",
  "dep:ctrlc",
]

# Feature flag to enable all default features.
# This is used by default locally while developing and on CI.
# We generally want to interface via CLI and have V8 enabled, while running tests.
default = ["cli", "js"]

# Feature flag to force JIT engine inside integration tests
force_jit = []

[workspace]
members = [
  ".",
  "gqlforge-typedefs-common",
  "gqlforge-typedefs",
  "gqlforge-macros",
  "gqlforge-formatter",
  "gqlforge-fixtures",
  "gqlforge-upstream-grpc",
  "gqlforge-tracker",
  "gqlforge-hasher",
  "gqlforge-http-cache",
  "gqlforge-version",
]

# Boost execution_spec snapshot diffing performance
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = 'abort'

[profile.benchmark]
debug = true
inherits = "release"

[[bench]]
harness = false
name = "gqlforge_benches"

[[test]]
harness = false
name = "execution_spec"

[[test]]
harness = false
name = "cli_spec"
path = "tests/cli/gen.rs"

[[test]]
harness = false
name = "json_to_config_spec"
path = "src/core/generator/tests/json_to_config_spec.rs"
