[package]
description = "A high-performance GraphQL runtime"
edition = "2024"
homepage = "https://gqlforge.pages.dev"
license = "Apache-2.0"
name = "gqlforge"
repository = "https://github.com/takumi3488/gqlforge"
version = "0.1.3"

[[bin]]
name = "gqlforge"
path = "src/main.rs"

[workspace.dependencies]
anyhow = "1.0.101"
async-graphql = { version = "7.2.1" }
convert_case = "0.11.0"
derive_more = { version = "2", features = ["from", "debug"] }
futures-util = { version = "0.3.31" }
gqlforge-valid = { path = "gqlforge-valid", version = "0.1.0" }
headers = "0.4"
http = "1"
indexmap = "2.13.0"
insta = { version = "1.46.3", features = ["json"] }
lazy_static = "1.5.0"
reqwest = { version = "0.13", features = [
  "json",
  "rustls",
  "http2",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1.49.0", features = ["rt", "time"] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }

[dependencies]
# The following IO-related dependencies (e.g. postgres, S3) are always compiled.

deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
rustls-native-certs = { version = "0.8" }
sqlparser = { version = "0.61" }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
tokio-postgres-rustls = { version = "0.13" }
aws-config = { version = "1", features = [
  "behavior-version-latest",
] }
aws-sdk-s3 = { version = "1" }

# Dependencies specific to CLI must have optional = true and be added to the default feature.

ctrlc = { version = "3.5.1", optional = true }
gqlforge-http-cache = { path = "gqlforge-http-cache", version = "0.1.0", optional = true }
gqlforge-version = { path = "./gqlforge-version", version = "0.1.0", optional = true }
http-cache-reqwest = { version = "1.0.0-alpha.4", features = [
  "manager-moka",
  "url-standard",
], default-features = false, optional = true }
hyper-rustls = { version = "0.27", optional = true, features = ["http2"] }
inquire = { version = "0.9.3", optional = true }
mimalloc = { version = "0.1.48", default-features = false, optional = true }
moka = { version = "0.12.13", default-features = false, features = [
  "future",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
  "trace",
  "logs",
  "metrics",
  "grpc-tonic",
  # required to make grpc requests
  "tls-roots",
], optional = true }
opentelemetry-system-metrics = { version = "0.31", optional = true }
rustls = { version = "0.23.36", optional = true, features = [
  "std",
  "aws_lc_rs",
], default-features = false }
rustls-pki-types = "1.14.0"
tokio-rustls = { version = "0.26", optional = true }
tower = { version = "0.5", features = [
  "util",
], optional = true, default-features = false }
tower-http = { version = "0.6", features = [
  "fs",
], optional = true, default-features = false }

anyhow = { workspace = true }
async-recursion = "1.1.1"
async-stream = "0.3"
async-trait = "0.1.89"
bytes = "1"
cache_control = "0.2.0"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
derive-getters = "0.5.0"
derive_setters = "0.1.9"
exitcode = "1.1.2"
fnv = "1.0.7"
futures-channel = { version = "0.3.31" }
futures-util = { workspace = true }
http-body-util = "0.1"
hyper = { version = "1", features = [
  "server",
  "http1",
], default-features = false }
hyper-util = { version = "0.1", features = [
  "tokio",
  "server-auto",
  "http1",
  "http2",
  "client-legacy",
] }
indexmap = { workspace = true }
lazy_static = { workspace = true }
lru = { version = "0.16.3" }
nom = "8.0.0"
num_cpus = "1.17.0"
once_cell = "1.21.3"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
protox = "0.9"
protox-parse = "0.9"
regex = "1.12.3"
reqwest = { workspace = true }
reqwest-middleware = "0.5"
resource = "0.6.1"
rquickjs = { "version" = "0.11.0", optional = true, features = ["macro"] }
rustls-pemfile = "2"
schemars = { version = "1.0.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.20"
serde_qs = "1.0"
serde_urlencoded = "0.7.1"
serde_yaml_ng = "0.10.0"
strum_macros = "0.28.0"
thiserror = { workspace = true }
tokio = { workspace = true }
ttl_cache = "0.5.1"
update-informer = { version = "1.3.0", default-features = false, features = [
  "github",
  "reqwest",
], optional = true }
url = { workspace = true }
which = { version = "8.0.0", optional = true }
# TODO: disable some levels with features?
async-graphql = { workspace = true, features = [
  "dynamic-schema",
  "dataloader",
  "apollo_tracing",
  "opentelemetry",
] }
async-graphql-value = "7.2.1"
base64 = "0.22.1"
chrono = "0.4.43"
convert_case = { workspace = true }
dashmap = "6.1.0"
derive_more = { workspace = true }
dotenvy = "0.15.7"
gqlforge-chunk = { path = "gqlforge-chunk", version = "0.1.0" }
gqlforge-hasher = { path = "gqlforge-hasher", version = "0.1.0" }
gqlforge-macros = { path = "gqlforge-macros", version = "0.1.0" }
gqlforge-tracker = { path = "gqlforge-tracker", version = "0.1.0", optional = true }
gqlforge-typedefs-common = { path = "./gqlforge-typedefs-common", version = "0.1.0" }
gqlforge-valid = { workspace = true }
headers = { workspace = true }
htpasswd-verify = { version = "0.3.0" } # uses fork (see [patch.crates-io])
http = { workspace = true }
indenter = "0.3.4"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
mime = "0.3.17"
num = "0.4.3"
opentelemetry = { version = "0.31", features = ["trace", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry-http = "0.31"
opentelemetry-prometheus = "0.31"
opentelemetry-semantic-conventions = "0.31"
opentelemetry-stdout = { version = "0.31", features = [
  "trace",
  "logs",
  "metrics",
] }
opentelemetry_sdk = { version = "0.31", features = [
  "trace",
  "logs",
  "metrics",
] }
path-clean = "=1.0.1"
pathdiff = "0.2.3"
phonenumber = "0.3.9"
pluralizer = "0.5.0"
prometheus = "0.14"
rand = "0.10.0"
serde_json_borrow = { version = "0.9.0", default-features = false }
strum = "0.28.0"
tonic = { version = "0.14", default-features = false }
tonic-types = "0.14"
tracing = { workspace = true }
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.22", features = [
  "default",
  "fmt",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"

# to build rquickjs bindings on systems without builtin bindings
[target.'cfg(all(target_os = "windows", target_arch = "x86"))'.dependencies]
rquickjs = { "version" = "0.11.0", optional = true, features = [
  "macro",
  "bindgen",
] }

[dev-dependencies]
bincode = "1"
cacache = { version = "13.1.0", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }
datatest-stable = "0.3.3"
flate2 = "1.1.9"
gqlforge-fixtures = { path = "./gqlforge-fixtures", version = "0.1.0" }
gqlforge-formatter = { path = "gqlforge-formatter", version = "0.1.0" }
http-cache-semantics = { version = "2", default-features = false, features = [
  "serde",
  "reqwest",
] }
httpmock = "0.8"
insta = { workspace = true }
maplit = "1.0.2"
markdown = "1.0.0"
pretty_assertions = "1.4.1"
stripmargin = "0.1.1"
tempfile = "3.24.0"
test-log = { version = "0.2.19", default-features = false, features = [
  "color",
  "trace",
] }
tokio-test = "0.4.5"

[features]

# Feature Flag to enable V8.
# V8 currently is not support on all platforms so, we control it via this feature flag.
js = ["dep:rquickjs"]

# Feature Flag to core CLI features.
cli = [
  "tokio/fs",
  "tokio/rt-multi-thread",
  "dep:mimalloc",
  "dep:http-cache-reqwest",
  "dep:moka",
  "dep:hyper-rustls",
  "dep:rustls",
  "dep:tokio-rustls",
  "dep:inquire",
  "dep:which",
  "dep:update-informer",
  "opentelemetry_sdk/testing",
  "opentelemetry_sdk/rt-tokio",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-system-metrics",
  "dep:gqlforge-tracker",
  "dep:gqlforge-http-cache",
  "dep:gqlforge-version",
  "dep:ctrlc",
  "dep:tower",
  "dep:tower-http",
]

# Feature flag to enable all default features.
# This is used by default locally while developing and on CI.
# We generally want to interface via CLI and have V8 enabled, while running tests.
default = ["cli", "js"]

# Feature flag to force JIT engine inside integration tests
force_jit = []

[workspace]
members = [
  ".",
  "gqlforge-typedefs-common",
  "gqlforge-typedefs",
  "gqlforge-macros",
  "gqlforge-formatter",
  "gqlforge-fixtures",
  "gqlforge-upstream-grpc",
  "gqlforge-tracker",
  "gqlforge-hasher",
  "gqlforge-http-cache",
  "gqlforge-version",
  "gqlforge-valid",
  "gqlforge-chunk",
]

# Boost execution_spec snapshot diffing performance
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = 'abort'

[[test]]
harness = false
name = "execution_spec"

[[test]]
harness = false
name = "cli_spec"
path = "tests/cli/gen.rs"

[[test]]
harness = false
name = "postgres_execution_spec"

[[test]]
harness = false
name = "json_to_config_spec"
path = "src/core/generator/tests/json_to_config_spec.rs"

[patch.crates-io]
htpasswd-verify = { git = "https://github.com/twistedfall/htpasswd-verify", rev = "ff14703083cbd639f7d05622b398926f3e718d61" }

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "takumi3488/homebrew-tap"
targets = [
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
hosting = ["github"]
pr-run-mode = "plan"
github-attestations = true
[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
