[package]
name = "gqlforge-http-cache"
version = "0.1.0"
edition = "2024"
description = "HTTP caching layer for gqlforge"
license = "Apache-2.0"

[dependencies]
http-cache-reqwest = { version = "1.0.0-alpha.4", default-features = false, features = ["manager-moka", "url-standard"] }
moka = { version = "0.12.13", default-features = false, features = [
    "future",
]}
http-cache-semantics = { version = "2", default-features = false, features = ["serde", "reqwest"]}
serde = "1.0.228"
async-trait = "0.1.89"

[dev-dependencies]
tokio = {version = "1.49.0", features = ["full"]}
url = { workspace = true }
reqwest = { workspace = true }
http = "1"
http-cache = "1.0.0-alpha.4"
