[package]
name = "gqlforge-tracker"
version = "0.1.0"
edition = "2024"
description = "Usage tracking for gqlforge"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = [
    "json",
    "rustls",
], default-features = false }
derive_more = { workspace = true }
url = { workspace = true }
lazy_static.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
machineid-rs = "1.2.4"
tokio = { workspace = true, features = ["rt", "time", "process"] }
tracing = { workspace = true }
sysinfo = "0.38.1"
gqlforge-version = { path = "../gqlforge-version", version = "0.1.0" }
posthog-rs = { version = "0.2.3" }
async-trait = "0.1.89"
chrono = "0.4.43"
whoami = "2.1.0"
strum = "0.27.2"
convert_case = { workspace = true }
http = { workspace = true }
regex = "1.12.3"
