[package]
name = "gqlforge-typedefs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
lazy_static = "1.5.0"
schemars = "0.8.22"
serde = "1.0.228"
serde_json = "1.0.149"
gqlforge = { path = "../", default-features = false, features = ["cli"]}
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
gqlforge-typedefs-common = { path = "../gqlforge-typedefs-common" }
async-graphql = { workspace = true }
strum = "0.27.2"
