[package]
name = "gqlforge-upstream-grpc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
headers = { workspace = true }
tonic = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"
tower = "0.5"
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
once_cell = "1.21.3"
tonic-tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-http = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
    "trace",
    # required to make grpc requests
    "tls-roots",
] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3.22"
derive_more = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14"
gqlforge-fixtures = { path = "../gqlforge-fixtures" }
